Bar-nav layout issue corrected.

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ a {
     height: 45rem;
     justify-content: center;
     align-items: center;
-    background: rgba(0, 0, 0, 0.5);
 }
 
 .home__heading {
@@ -123,7 +122,6 @@ a {
 .home::before{
     content: "";
     position: absolute;
-    top: 0;
     right: 0;
     background: url(../images/keyboard.jpg) no-repeat center center/cover;
     height: 50rem;
@@ -170,4 +168,3 @@ a {
   max-height: 100vh;
   opacity: 1;
 }
-
